@@ -26,11 +26,13 @@ public class User implements UserDetails {
     private String email;
     private String password;
     private String fullname;
+    @Enumerated(EnumType.STRING)
+    private Role role;
 
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority(role.name()));
     }
 
 
